mid commit I cannot lose this

--- a/Logic/makefile
+++ b/Logic/makefile
@@ -7,6 +7,9 @@ OBJS=$(patsubst %.cpp, $(ODIR)/%.o, $(SRC))
 
 all: $(OBJS)
 
+$(ODIR)/game.o: game.cpp
+		$(CC) $(LIBS) -I../network/ -c -o $@ $^ ../network/obj/client.o
+
 $(ODIR)/%.o: %.cpp
 		mkdir -p obj
 		$(CC) $(LIBS) -c -o $@ $^
