--- a/network/makefile
+++ b/network/makefile
@@ -3,17 +3,13 @@ LIBS=-std=c++11 -lsfml-window -lsfml-network -lsfml-graphics -lsfml-system -lBox
 
 ODIR=obj
 
-_OBJS=state.o server.o client.o
+_OBJS=server.o client.o
 OBJS= $(patsubst %,$(ODIR)/%,$(_OBJS))
 
-all: $(ODIR)/state.o server client
+all: server client
 
 
-$(ODIR)/state.o: state.cpp state.h
-	mkdir -p obj
-	$(CC) -std=c++11 -c state.cpp -o $@
-
-server: $(ODIR)/state.o server.cpp
+server:
 	mkdir -p obj
 	$(CC) $(LIBS) -c -o $(ODIR)/$@.o $@.cpp
 	# $(CC) $(LIBS) obj/state.o obj/server.o -o $@
